IGS-24 refactor: 모든 API 에러 해결